# AugmentedReality

./: .gitignore  README.md
Aruco markers/: CMakeLists.txt  Makefile  aruco  aruco.cbp  aruco.cpp
Camera calibration/: CMakeLists.txt  calibrate.cpp
Dev ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Dev ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
Dev ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
Dev ws/install/turtlesim/include/turtlesim/action/detail/: rotate_absolute__traits.hpp
Dev ws/install/turtlesim/include/turtlesim/msg/detail/: color__traits.hpp  pose__traits.hpp
Dev ws/install/turtlesim/include/turtlesim/srv/detail/: kill__struct.hpp  kill__traits.hpp  set_pen__traits.hpp  spawn__struct.hpp  spawn__traits.hpp  teleport_absolute__traits.hpp  teleport_relative__traits.hpp
Dev ws/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
Dev ws/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
Dev ws/install/turtlesim/share/turtlesim/cmake/: turtlesimConfig-version.cmake  turtlesimConfig.cmake  turtlesim__rosidl_typesupport_cExport.cmake  turtlesim__rosidl_typesupport_cppExport.cmake
Dev ws/log/: latest_build
Dev ws/src/cpp_pubsub/: CMakeLists.txt
Dev ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
Markers detection/: CMakeLists.txt  detect_markers.cpp
OpenGL/: Makefile
OpenGL/New OpenGL/: Makefile  main  main.cpp
OpenGL/OpenGL test/: CMakeLists.txt
OpenGL/OpenGL test/glad/: CMakeLists.txt
OpenGL/OpenGL test/glad/include/glad/: glad.h
OpenGL/OpenGL test/glad/src/: glad.c
OpenGL/OpenGL test/project/: CMakeLists.txt  shader.frag  shader.vs
OpenGL/OpenGL test/project/include/: shader.h  stb_image.h
OpenGL/OpenGL test/project/src/: main.cpp
OpenGLTest/: OpenGLTest.pro  main.cpp  mainscene.cpp  mainscene.h  mainwindow.cpp
Ros2/: camera
Ros2/cv_pkg/: CMakeLists.txt  package.xml
Ros2/cv_pkg/cv_pkg/include/cv_pkg/: Emitter.hpp  Receiver.hpp  Receiver2.hpp
Ros2/cv_pkg/cv_pkg/src/: Emitter.cpp  Receiver.cpp  Receiver2.cpp
Ros2/cv_pkg/src/: emitter_and_receiver_executable.cpp  emitter_executable.cpp  receiver2_executable.cpp  receiver_executable.cpp
Ros2/cv_pkg_msgs/: CMakeLists.txt  package.xml
Ros2/cv_pkg_msgs/msg/: ArucoMarkers.msg
Video our/src/cpp/: CMakeLists.txt
Video our/src/cpp/include/cpp/: base_exception.h  video_receiver.h  video_settings.h  video_transmitter.h
Video our/src/cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Video our/src/cpp/install/cpp/include/cpp/: base_exception.h  video_receiver.h  video_settings.h  video_transmitter.h
Video our/src/cpp/install/cpp/lib/cpp/: video_receiver  video_transmitter
Video our/src/cpp/install/cpp/share/ament_index/resource_index/parent_prefix_path/: cpp
Video our/src/cpp/install/cpp/share/cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Video our/src/cpp/install/cpp/share/cpp/cmake/: ament_cmake_export_targets-extras.cmake  cppConfig.cmake  export_cppExport.cmake
Video our/src/cpp/log/: latest_build
Video our/src/cpp/src/: base_exception.cpp  video_receiver.cpp  video_transmitter.cpp
include/glad/: glad.h
src/: glad.c
